clusters/app.ci/ci-rpms/admin_01_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=confirm
  name: ci-rpms
