clusters/app.ci/ci-rpms/artifacts-master.yaml
# Run an RPM server for release artifacts
#
kind: List
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: artifacts-openshift-origin-master
    namespace: ci-rpms
  spec:
    to:
      kind: Service
      name: artifacts-openshift-origin-master
    tls:
      termination: Edge
      insecureEdgeTerminationPolicy: Redirect
- apiVersion: v1
  kind: Service
  metadata:
    name: artifacts-openshift-origin-master
    namespace: ci-rpms
  spec:
    selector:
      app: artifacts-openshift-origin-master
    ports:
    - port: 80
      targetPort: 8080
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: artifacts-openshift-origin-master
    namespace: ci-rpms
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","namespace":"openshift","name":"origin-v4.0:artifacts"},"fieldPath":"spec.template.spec.containers[?(@.name==\"srv\")].image"}]'
  spec:
    replicas: 2
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: artifacts-openshift-origin-master
    template:
      metadata:
        labels:
          app: artifacts-openshift-origin-master
      spec:
        containers:
        - name: srv
          image: ' '
          command:
          - /bin/bash
          - -c
          args:
          - |
            [...]
          ports:
          - containerPort: 8080
            protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
          workingDir: /srv
        restartPolicy: Always
        terminationGracePeriodSeconds: 1
